fix: Overflow with long pre code

--- a/style/supercoolweb.scss
+++ b/style/supercoolweb.scss
@@ -87,6 +87,7 @@ article {
 		padding: 0.5em;
 		background-color: #222;
 		color: #eee;
+		white-space: pre-wrap;
 	}
 	blockquote {
 		border: 0.1rem solid #ccc;
